Hash out search screen for events.
Also includes all prerequisites for this screen, e.g. styles and
typefaces.

Finally, this commit gives the event search screen to its own route,
since we very well may have other searching mechanisms in the future.

--- a/app/assets/stylesheets/screen.css.scss
+++ b/app/assets/stylesheets/screen.css.scss
@@ -16,14 +16,8 @@ body {
   @include susy-grid-background;
 }
 
-#main {
-  .status {
-    @include span-columns(3);
-  }
-
-  .report {
-    @include span-columns(17 omega);
-  }
+label[for] {
+  cursor: pointer;
 }
 
 // vim:ts=2:sw=2:et:tw=78
