Generalize input field styles.
The tagit plugin generates something that is meant to look like an input
field but does not strucurally resemble one.

--- a/app/assets/stylesheets/_motifs.css.scss
+++ b/app/assets/stylesheets/_motifs.css.scss
@@ -4,4 +4,15 @@
   font-variant: small-caps;
 }
 
+@mixin input-field {
+  background-color: $light-background-color;
+  border: 1px solid black;
+  font-family: $body-font-family;
+  font-size: $base-font-size;
+  line-height: $base-line-height;
+  margin: 0;
+  padding-left: 2px;
+  padding-right: 2px;
+}
+
 // vim:ts=2:sw=2:et:tw=78
