--- a/app/assets/stylesheets/screen.css.scss
+++ b/app/assets/stylesheets/screen.css.scss
@@ -1,4 +1,5 @@
 @import "base";
+@import "motifs";
 @import "compass/reset";
 
 html {
@@ -23,13 +24,7 @@ body {
 }
 
 button, input {
-  border: 1px solid black;
-  font-family: $body-font-family;
-  font-size: $base-font-size;
-  line-height: $base-line-height;
-  margin: 0;
-  padding-left: 2px;
-  padding-right: 2px;
+  @include input-field;
 }
 
 button {
