--- a/app/assets/stylesheets/_base.css.scss
+++ b/app/assets/stylesheets/_base.css.scss
@@ -22,6 +22,14 @@ $body-font-family       : 'Source Sans Pro', sans-serif;
 $base-font-size         : 18px;
 $base-line-height       : 24px;
 
+// This name borrows the concept of a beat (or a pause) from theater.  It's
+// used to designate some amount of horizontal space to separate related but
+// distinct elements.
+//
+// I'm pretty sure there's a typographical name for this, but I can't remember
+// what it is.
+$beat-width             : 0.25em;
+
 // ---------------------------------------------------------------------------
 // Grid
 // ---------------------------------------------------------------------------
