Factor out border style.

--- a/app/assets/stylesheets/_base.css.scss
+++ b/app/assets/stylesheets/_base.css.scss
@@ -48,6 +48,7 @@ $show-grid-backgrounds  : false;
 $nu-purple              : #520063;
 $light-background-color : #f8f8f8;
 $dark-background-color  : #c0c0c0;
-$link-color		: #0000ff;
+$link-color             : #0000ff;
+$border                 : 1px solid $dark-background-color;
 
 // vim:ts=2:sw=2:et:tw=78
