--- a/app/assets/stylesheets/_motifs.css.scss
+++ b/app/assets/stylesheets/_motifs.css.scss
@@ -6,7 +6,7 @@
 
 @mixin input-field {
   background-color: $light-background-color;
-  border: 1px solid black;
+  border: $border;
   font-family: $body-font-family;
   font-size: $base-font-size;
   line-height: $base-line-height;
