Explicitly set foreground color.
Some systems (i.e. mine) don't use a dark color for text foreground.
Most systems aren't like this, but why assume when you can explicitly
state your intention?

--- a/app/assets/stylesheets/_base.css.scss
+++ b/app/assets/stylesheets/_base.css.scss
@@ -53,6 +53,7 @@ $border                 : 1px solid $dark-background-color;
 $focus-background-color : desaturate(lighten($nu-purple, 70%), 80%);
 $tag-background-color   : $focus-background-color;
 $tag-color              : invert($tag-background-color);
+$foreground-color       : #222222;
 
 // ---------------------------------------------------------------------------
 // Maxima
