--- a/devel/redis.conf.erb
+++ b/devel/redis.conf.erb
@@ -18,7 +18,7 @@ daemonize no
 
 # When running daemonized, Redis writes a pid file in /usr/local/var/run/redis.pid by
 # default. You can specify a custom pid file location here.
-pidfile <%= redis_dir %>/redis.pid
+pidfile "<%= redis_dir %>/redis.pid"
 
 # Accept connections on the specified port, default is 6379.
 # If port 0 is specified Redis will not listen on a TCP socket.
@@ -150,7 +150,7 @@ dbfilename dump.rdb
 # The Append Only File will also be created inside this directory.
 #
 # Note that you must specify a directory here, not a file name.
-dir <%= redis_dir %>
+dir "<%= redis_dir %>"
 
 ################################# REPLICATION #################################
 
