Ensure that the datepicker is initially hidden.

--- a/app/assets/stylesheets/jquery-ui.css.scss
+++ b/app/assets/stylesheets/jquery-ui.css.scss
@@ -52,6 +52,7 @@
 .ui-datepicker {
   background-color: $light-background-color;
   border: $border;
+  display: none;
   padding: $beat-width;
 }
 
