--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -69,6 +69,20 @@
         color: gray;
       }
     }
+
+    .slick-cell {
+      .participant-id {
+        font-size: 80%;
+
+        &:before {
+          content: "(";
+        }
+
+        &:after {
+          content: ")";
+        }
+      }
+    }
   }
 }
 
