Let the grid grow as long as it needs to.

--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -54,11 +54,9 @@
   }
 
   .search-results {
-    height: 800px;
+    width: 100%;
 
     .grid {
-      height: 100%;
-
       .slick-column-name {
         @include heading;
       }
