--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -2,6 +2,7 @@
 @import "icons";
 @import "motifs";
 @import "compass/css3/opacity";
+@import "compass/css3/transition";
 
 @mixin search-criterion($stretch-input: false) {
   .label, .input {
@@ -57,6 +58,10 @@
     width: 100%;
 
     .grid {
+      .grid-canvas {
+        @include transition(width 0.25s ease-out);
+      }
+
       .participant-id {
         font-size: 80%;
 
